--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -187,6 +187,36 @@ transition: width 1s;
   margin-top: 65px;
   background-color: rgb(244, 244, 244);
 }
+#line{
+  width: 100%;
+    height: 1px;
+    background: black;
+    margin-bottom: 7%;
+}
+#subject{
+  margin-right:5%;
+}
+#c_s{
+  margin-left:-7%;
+}
+#change_class_name{
+  margin-left:7%;
+}
+#content{
+  heigth:30%;
+}
+#dialog{
+  height:60%;
+}
+.control-labels{
+  margin-right:70%;
+}
+.form-controls{
+  width:80%;
+}
+.area{
+  margin-bottom:1%;
+}
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
@@ -208,8 +238,21 @@ transition: width 1s;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
+    height:80%;
+    border-radius:5%;
 }
 
+.modal-footer{
+  text-align:center;
+}
+.modal-dialog{
+  margin:0% 30% 0% 30%;
+}
+
+.form-group{
+  text-align:center;
+  margin-bottom:7%;
+}
 /* The Close Button */
 .close {
     color: #aaaaaa;
