--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -194,14 +194,49 @@ transition: width 1s;
     margin-bottom: 7%;
 }
 #subject{
-  margin-right:5%;
+  font-size: 17px;
+  font-family: "NanumBarunGothic";
+  color: rgb(90, 90, 90);
+  font-weight: bold;
+  z-index: 13;
 }
 #c_s{
   margin-left:-7%;
+  font-size: 17px;
+  font-family: "NanumBarunGothic";
+  color: rgb(90, 90, 90);
+  font-weight: bold;
+  z-index: 13;
 }
-#change_class_name{
-  margin-left:7%;
+#prof{
+  font-size: 17px;
+  font-family: "NanumBarunGothic";
+  color: rgb(90, 90, 90);
+  font-weight: bold;
+  z-index: 13;
 }
+#prof2{
+  font-size: 17px;
+  font-family: "NanumBarunGothic";
+  color: rgb(90, 90, 90);
+  font-weight: bold;
+  z-index: 13;
+}
+#timelabel{
+  font-size: 17px;
+  font-family: "NanumBarunGothic";
+  color: rgb(90, 90, 90);
+  font-weight: bold;
+  z-index: 13;
+}
+#time2{
+  font-size: 17px;
+  font-family: "NanumBarunGothic";
+  color: rgb(90, 90, 90);
+  font-weight: bold;
+  z-index: 13;
+}
+
 #content{
   heigth:30%;
 }
@@ -611,7 +646,7 @@ table.type08 td .ex_time{
   height : 30px;
   z-index: 11;
   margin-left: 190px;
-  margin-top: -22px;
+  margin-top: -28px;
 }
 
 #Replybtn{
@@ -641,7 +676,18 @@ table.type08 td .ex_time{
   height:29px;
   z-index: 12;
 }
-
+#OKbtn{
+  border-radius: 5px;
+  font-size: 13px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  background-color: rgb(58, 74, 88);
+  line-height: 1.2;
+  margin-left: 10px;
+  width: 70px;
+  height:29px;
+  z-index: 12;
+}
 #Okbtn2{
   border-radius: 5px;
   font-size: 13px;
@@ -678,6 +724,17 @@ table.type08 td .ex_time{
  z-index: 5;
 }
 
+#message_text2{
+ border-width: 1px;
+ border-color: rgb(190, 190, 190);
+ border-style: solid;
+ position: absolute;
+ width: 544px;
+ height: 24px;
+ margin-top : 8px;
+ z-index: 5;
+}
+
 #who_send{
   font-size: 15px;
   font-family: "NanumBarunGothic";
@@ -707,6 +764,18 @@ table.type08 td .ex_time{
   margin-top: 38px;
   margin-left: 13px;
   z-index: 3;
+}
+.modal-request-header{
+  width :100%;
+  height : 60px;
+}
+.modal-request-body{
+  width :100%;
+  height : 55px;
+}
+.modal-request-footer{
+    width :100%;
+    height : 40px;
 }
 .modal-mail-header{
   width :100%;
@@ -787,19 +856,6 @@ table.type08 td .ex_time{
   margin-top : 56px;
   z-index: 13;
 }
-#SendReplybtn{
-  border-radius: 5px;
-  font-size: 13px;
-  font-family: "NanumBarunGothic";
-  color: rgb(255, 255, 255);
-  background-color: rgb(58, 74, 88);
-  line-height: 1.2;
-  position: absolute;
-  margin-left: 200px;
-  width: 70px;
-  height:29px;
-  z-index: 11;
-}
 
 #SendClosebtn{
   border-radius: 5px;
@@ -810,6 +866,19 @@ table.type08 td .ex_time{
   line-height: 1.2;
   position: absolute;
   margin-left: 90px;
+  width: 70px;
+  height:29px;
+  z-index: 12;
+}
+
+#Closebtn{
+  border-radius: 5px;
+  font-size: 13px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  background-color : rgb(153, 153, 153);
+  line-height: 1.2;
+  margin-left: 10px;
   width: 70px;
   height:29px;
   z-index: 12;
@@ -826,4 +895,81 @@ table.type08 td .ex_time{
   position  :absolute;
   height:30px;
   z-index: 11;
+}
+
+/* 강의교환 신청 모달 */
+#modal-request-content{
+  left : 50%;
+  top : 0px;
+  width:546px;
+  height:150px;
+  z-index:1000;
+  background-color: #fefefe;
+  border: 1px solid #888;
+}
+
+#request_close_btn{
+  border-radius: 5px;
+  font-size: 13px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  background-color : rgb(153, 153, 153);
+  line-height: 1.2;
+  position: absolute;
+  width: 70px;
+  height:29px;
+  z-index: 12;
+  margin-left : 280px;
+}
+
+#SendReplybtn{
+  border-radius: 5px;
+  font-size: 13px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  background-color: rgb(58, 74, 88);
+  line-height: 1.2;
+  position: absolute;
+  width: 70px;
+  height:29px;
+  z-index: 11;
+  margin-left : 190px;
+}
+
+#recipientname_request{
+  font-size: 15px;
+  font-family: "NanumBarunGothic";
+  color: rgb(90, 90, 90);
+  font-weight: bold;
+  line-height: 1.2;
+  position: absolute;
+  z-index: 3;
+}
+
+#phone_request{
+  font-size: 15px;
+  font-family: "NanumBarunGothic";
+  color: rgb(0, 0, 0);
+  line-height: 1.2;
+  position: absolute;
+  margin-top: 37px;
+  z-index: 3;
+}
+.ex_num{
+  font-family: "NanumBarunGothic";
+}
+.ex_writer{
+  font-family: "NanumBarunGothic";
+}
+.ex_subject{
+  font-family: "NanumBarunGothic";
+}
+.ex_professor{
+  font-family: "NanumBarunGothic";
+}
+.ex_time{
+  font-family: "NanumBarunGothic";
+}
+#exchange_req_td{
+  font-family: "NanumBarunGothic";
 }
