--- a/views/ft_mypage.ejs
+++ b/views/ft_mypage.ejs
@@ -204,7 +204,7 @@
                           %>
                                          <div class = "modal" id= "Show_app_Modal<%=oneItem.id%>" style="display:none;">
                                          <div class = "modal-dialog">
-                                           <div class = "modal-content">
+                                           <div class = "modal-content" id = "modal-app-content">
 
                                            </div>
                                            </div>
