--- a/views/ft_replymodal.ejs
+++ b/views/ft_replymodal.ejs
@@ -6,7 +6,7 @@
 <div class= "modal-reply-body">
   <form>
   <div class = "form-group">
-      <textarea class= "form-control" id="message_text"></textarea>
+      <textarea class= "form-control" id="message_text3"></textarea>
     </div>
   </form>
 </div>
