--- a/views/ft_showapp_test1111.ejs
+++ b/views/ft_showapp_test1111.ejs
@@ -38,7 +38,7 @@
         </table>
   </div> <!-- modal-body -->
   <div class = "modal-footer">
-    <button type = "button" class = "btn btn-default" data-dismiss = "modal" id="Okbtn"> 확인</button>
+    <button type = "button" class = "btn btn-default" data-dismiss = "modal" id="Okbtn22"> 확인</button>
 </div>
 
 <%
