--- a/views/ft_updateinfo.ejs
+++ b/views/ft_updateinfo.ejs
@@ -57,6 +57,9 @@
     </div>
       <input type = "button" value = "수정완료" id="updatefinButton">
     </div>
+    <div id="main_area_second">
+
+    </div>
     </div>
 
 </div>
