--- a/views/ft_main.ejs
+++ b/views/ft_main.ejs
@@ -177,7 +177,7 @@
                           </td>
                           <div class = "modal" id= "board_content_view_modal<%=item.id%>" style="display:none;" >
                           <div class = "modal-dialog">
-                            <div class = "modal-content">
+                            <div class = "modal-content" id = "modal-boardview-content">
                               <!-- remote ajax call이 되는영역 -->
                             </div>
                             </div>
