--- a/views/ft_main.ejs
+++ b/views/ft_main.ejs
@@ -20,7 +20,7 @@
 
       <div id="first_area">
         <div id="div_logo">
-          <img src="/images/로고.png" id="logo"></img>
+          <img src="/images/로고b.png" id="logo"></img>
         </div>
         <div id="z">
         </div>
