--- a/views/ft_login.ejs
+++ b/views/ft_login.ejs
@@ -17,7 +17,7 @@
         <div id="z">
         </div>
         <div id="div_login">
-          <p id="first_join">회원가입</p><p id="first_login">로그인</p><div id="book_mark"><img src = "/images/book.png"></div>
+          <p id="first_join">회원가입</p><p id="first_login">로그인</p>
         </div>
       </div>
       <div id="line_1">
