--- a/views/ft_mypage.ejs
+++ b/views/ft_mypage.ejs
@@ -13,7 +13,7 @@
     <div id="wrapper">
       <div id="first_area">
         <div id="div_logo">
-            <img src="/images/로고b.png" id="logo"></img>
+            <img src="/images/로고.png" id="logo"></img>
         </div>
         <div id="z">
         </div>
@@ -90,7 +90,7 @@
                     <div id="rectangle_5_1">
                     <!--  <p id="my_board">내가 쓴 게시물</p> -->
                       <div class="tab">
-                        <button class="tablinks" onclick="postexchange(event, 'post_i_wrote')">내가 쓴 버림/구함 게시물</button>
+                        <button class="tablinks" onclick="postexchange(event, 'post_i_wrote')">내가 쓴 판매/구입 게시물</button>
                         <button class="tablinks" onclick="postexchange(event, 'exchange_i_wrote')">내가 쓴 교환 게시물</button>
                         <button class="tablinks" onclick="postexchange(event, 'request_list')">내가 신청한 목록</button>
                       </div>
@@ -100,7 +100,7 @@
                         <table class="type08">
                             <thead>
                               <tr>
-                                <td>버림/구함</td>
+                                <td>판매/구입</td>
                                 <td>글제목</td>
                                 <td>작성일자</td>
                                 <td>작성자</td>
