--- a/views/ft_userHome.ejs
+++ b/views/ft_userHome.ejs
@@ -92,8 +92,8 @@
     <li><a href = '/first_test/leave1'> Leave </a></li>
     <li><a href = '/first_test/mypage'> MyPage </a></li>
     <li><a href = '/first_test/matching'> 강의교환페이지xx </a></li>
-    <li><a href = '/first_test/board'>버림/구함 게시판xx</a></li>
-    <li><a href = '/first_test/main/1'>Main</a></li>
+    <li><a href = '/first_test/board/1'>판매/구입 게시판xx</a></li>
+    <li><a href = '/first_test/main'>Main</a></li>
 
     <button type = "button" id="RecvMailBoxbtn" class = "mailbox-modal-btn" data-toggle"modal">
       받은메일함
