--- a/views/ft_board.ejs
+++ b/views/ft_board.ejs
@@ -1,30 +1,59 @@
 <!DOCTYPE html>
 <html>
-<meta name=”viewport” content=”width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no” />
-<meta charset="utf-8">
+
 <head>
   <title>
     게시판
   </title>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
   <script src="/javascripts/ft_board.js"></script>
-  <link rel='stylesheet' href='/stylesheets/new_board.css' />
+  <link rel='stylesheet' href='/stylesheets/board.css' />
 </head>
 
-<body ondragstart="return false">
-  <div id="wrapper">
-    <div id="first_area">
-      <div id="div_logo">
-        <p id="logo"><a href = "/first_test/main/1" style="text-decoration:none;">LOGO</a></P>
-      </div>
-      <div id="z">
-      </div>
-      <div id="div_login">
-        <% if(!session) { %>
-        <p id="first_join"><a href = "/first_test/join1" style="text-decoration:none;" >회원가입</a></p><p id="first_login"><a href = "/first_test/login" style="text-decoration:none;">로그인</a></p>
-        <% } else  {%>
-        <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none;">로그아웃</a></p><button type = "button" id="MailBoxbtn" data-toggle="modal">메일함</button><p id="mypage_mention"><a href = "/first_test/mypage" style="text-decoration:none;">mypage</a></p>
-        <% } %>
+<style>
+  #myModal {
+    background-color: gray;
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 1;
+    display: none;
+    left: 0;
+    top: 0;
+    padding-top: 100px;
+    overflow: auto;
+  }
+
+ .modalcontent {
+    width: 350px;
+    height: 400px;
+    background-color: white;
+    margin: 15px 456px 0px 456px;
+  }
+
+ td.titleButton:hover {
+    color: red;
+    cursor: pointer;
+  }
+</style>
+
+<body style=" width: 1200px; height: 768px; position : relative;">
+  <div id="line_1">
+   </div>
+   <div id="first_area">
+     <p id="logo"><a href = "/first_test/main/1">LOGO</a></P>
+     <p id="first_FAQ">FAQ</p>
+     <% if(!session) { %>
+     <p id="first_join"><a href = "/first_test/join1">회원가입</a></p><p id="first_login"><a href = "/first_test/login">로그인</a></p>
+     <% } else  {%>
+     <p id="first_join"><a href = "/first_test/logout">로그아웃</a></p>
+     <% } %>
+     <p id="mypage_mention"><a href = "/first_test/mypage">mypage</a></p>
+
+             <button type = "button" id="MailBoxbtn" class = "mailbox-modal-btn" data-toggle="modal">
+                     메일함
+             </button>
 
              <div class = "modal" id= "MailBoxModal" style="display:none;" >
              <div class = "modal-dialog">
@@ -34,11 +63,11 @@
                </div>
                </div>
    </div>
-     <p id="mention1">버림/구함</p>
+     <p id="mention1">판매/구입</p>
         <div id="small_rectangle"></div>
         <p id="mention2">교환</p>
         <div>
-          <p id="mention3">버림/구함</p>
+          <p id="mention3">판매/구입</p>
           <div id="rectangle_2"></div>
         </div>
 
@@ -50,7 +79,7 @@
     <thead>
       <tr>
         <td>게시글번호</td>
-        <td>버림/구함</td>
+        <td>판매/구입</td>
         <td>글제목</td>
         <td>작성일자</td>
         <td>작성자</td>
@@ -105,8 +134,8 @@
   <p><a href='/first_test/mypage'>마이페이지</a></p>
   <div id="myModal" class="modal">
     <div class="modalcontent">
-      <input type="radio" name="choice" value="버림" >버림
-      <input type="radio" name="choice" value="구함">구함
+      <input type="radio" name="choice" value="판매" >판매
+      <input type="radio" name="choice" value="구입">구입
       <p>글제목</p>
       <input type='text' id='title'>
       <p>내용</p>
@@ -116,7 +145,7 @@
     </div>
   </div>
 
-</div>
+
 </body>
 
 </html>
