--- a/views/ft_matching.ejs
+++ b/views/ft_matching.ejs
@@ -57,7 +57,7 @@
          <p id="first_FAQ">FAQ</p><p id="first_join">회원가입</p><p id="first_login">로그인</p><p id="mypage_mention">mypage</p>
          <i class="glyphicon glyphicon-envelope" style="position : absolute; top : 15px; left : 900px; font-size : 16px;"></i>
        </div>
-       <p id="mention1">버림/구함</p>
+       <p id="mention1">판매/구입</p>
        <div id="small_rectangle"></div>
        <p id="mention2">교환</p>
        <div>
