[추가] bootstrap css파일

--- a/views/ft_findID.ejs
+++ b/views/ft_findID.ejs
@@ -10,6 +10,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="/javascripts/ft_find.js"></script>
   <link rel='stylesheet' href='/stylesheets/find.css' />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
   <!--  <script type="text/javascript">
   var cleanUri = location.protocol + '//' + location.host + location.pathname + location.hash;
   cleanUri = encodeURIComponent(cleanUri).replace(/[!'()]/g, escape).replace(/\*/g, "%2A");
