--- a/views/ft_join2.ejs
+++ b/views/ft_join2.ejs
@@ -7,6 +7,8 @@
     <script type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link type="text/css" rel="stylesheet" href="/stylesheets/new_join2.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
     <script src="/javascripts/ft_join.js"></script>
   </head>
   <body ondragstart="return false">
