--- a/views/ft_leave2.ejs
+++ b/views/ft_leave2.ejs
@@ -9,6 +9,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <link rel = 'stylesheet' href='/stylesheets/new_leave2.css'/>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
       <script src = "/javascripts/ft_leave.js"></script>
   </head>
   <body style=" width: 1200px; height: 768px; position : relative;">
