--- a/views/ft_main.ejs
+++ b/views/ft_main.ejs
@@ -6,8 +6,8 @@
         <script type="text/javascript" ></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <title>board</title>
        <link type="text/css" rel="stylesheet" href="/stylesheets/main.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
        <script src="/javascripts/ft_main.js"></script>
   </head>
   <body ondragstart="return false">
